apps/proto-pump/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proto-pump
  namespace: apps
spec:
  selector:
    app: proto-pump
  ports:
    - port: 8000
      targetPort: 8000
