apps/proto-pump/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proto-pump-api
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: api.proto-pump.skravops.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proto-pump
                port:
                  number: 8000
